v3_compilerParser.py
# Generated from v3_compiler.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class v3_compilerParser ( Parser ):

    grammarFileName = "v3_compiler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\n'", "'int'", "'void'", "'return'", 
                     "'struct'", "'if'", "'else'", "'for'", "'while'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", 
                     "'>='", "'<<'", "'>>'", "'=='", "'!='", "'+'", "'-'", 
                     "'++'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", 
                     "'&&'", "'||'", "'^'", "'!'", "'~'", "','", "';'", 
                     "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
                     "'>>='", "'&='", "'^='", "'|='", "'.'", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INT", "VOID", "RETURN", 
                      "STRUCT", "IF", "ELSE", "FOR", "WHILE", "LeftParen", 
                      "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
                      "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "LeftShift", "RightShift", "Equal", "NotEqual", "Plus", 
                      "Minus", "PlusPlus", "MinusMinus", "Star", "Div", 
                      "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", 
                      "Tilde", "Comma", "Semi", "Assign", "StarAssign", 
                      "DivAssign", "ModAssign", "PlusAssign", "MinusAssign", 
                      "LeftShiftAssign", "RightShiftAssign", "AndAssign", 
                      "XorAssign", "OrAssign", "Dot", "Arrow", "IntegerConstant", 
                      "DecimalConstant", "HexConstant", "ID", "LineComment", 
                      "WhiteSpace" ]

    RULE_globalSpace = 0
    RULE_myGlobalCode = 1
    RULE_myDeclare = 2
    RULE_myFuncDefinition = 3
    RULE_myFuncInputPara = 4
    RULE_myStatement = 5
    RULE_myFuncBodyCode = 6
    RULE_myExpr = 7
    RULE_mySelection = 8
    RULE_myIteration = 9
    RULE_myForCondi = 10
    RULE_myReturn = 11
    RULE_myType = 12
    RULE_myNL = 13

    ruleNames =  [ "globalSpace", "myGlobalCode", "myDeclare", "myFuncDefinition", 
                   "myFuncInputPara", "myStatement", "myFuncBodyCode", "myExpr", 
                   "mySelection", "myIteration", "myForCondi", "myReturn", 
                   "myType", "myNL" ]

    EOF = Token.EOF
    T__0=1
    INT=2
    VOID=3
    RETURN=4
    STRUCT=5
    IF=6
    ELSE=7
    FOR=8
    WHILE=9
    LeftParen=10
    RightParen=11
    LeftBracket=12
    RightBracket=13
    LeftBrace=14
    RightBrace=15
    Less=16
    LessEqual=17
    Greater=18
    GreaterEqual=19
    LeftShift=20
    RightShift=21
    Equal=22
    NotEqual=23
    Plus=24
    Minus=25
    PlusPlus=26
    MinusMinus=27
    Star=28
    Div=29
    Mod=30
    And=31
    Or=32
    AndAnd=33
    OrOr=34
    Caret=35
    Not=36
    Tilde=37
    Comma=38
    Semi=39
    Assign=40
    StarAssign=41
    DivAssign=42
    ModAssign=43
    PlusAssign=44
    MinusAssign=45
    LeftShiftAssign=46
    RightShiftAssign=47
    AndAssign=48
    XorAssign=49
    OrAssign=50
    Dot=51
    Arrow=52
    IntegerConstant=53
    DecimalConstant=54
    HexConstant=55
    ID=56
    LineComment=57
    WhiteSpace=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    nl_count=0;


    class GlobalSpaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.finalAST = ''
            self.g = None # MyGlobalCodeContext

        def myGlobalCode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(v3_compilerParser.MyGlobalCodeContext)
            else:
                return self.getTypedRuleContext(v3_compilerParser.MyGlobalCodeContext,i)


        def getRuleIndex(self):
            return v3_compilerParser.RULE_globalSpace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalSpace" ):
                listener.enterGlobalSpace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalSpace" ):
                listener.exitGlobalSpace(self)




    def globalSpace(self):

        localctx = v3_compilerParser.GlobalSpaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_globalSpace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx.finalAST += '('
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << v3_compilerParser.T__0) | (1 << v3_compilerParser.INT) | (1 << v3_compilerParser.VOID) | (1 << v3_compilerParser.STRUCT))) != 0):
                self.state = 29
                localctx.g = self.myGlobalCode()
                localctx.finalAST += '%s'%(localctx.g.myGlobalAST)
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            localctx.finalAST += ')myGlobal'
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MyGlobalCodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.myGlobalAST = ''
            self.d = None # MyDeclareContext
            self._myFuncDefinition = None # MyFuncDefinitionContext
            self._myNL = None # MyNLContext

        def Semi(self):
            return self.getToken(v3_compilerParser.Semi, 0)

        def myDeclare(self):
            return self.getTypedRuleContext(v3_compilerParser.MyDeclareContext,0)


        def myFuncDefinition(self):
            return self.getTypedRuleContext(v3_compilerParser.MyFuncDefinitionContext,0)


        def myNL(self):
            return self.getTypedRuleContext(v3_compilerParser.MyNLContext,0)


        def getRuleIndex(self):
            return v3_compilerParser.RULE_myGlobalCode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyGlobalCode" ):
                listener.enterMyGlobalCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyGlobalCode" ):
                listener.exitMyGlobalCode(self)




    def myGlobalCode(self):

        localctx = v3_compilerParser.MyGlobalCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_myGlobalCode)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                localctx.d = self.myDeclare()
                self.state = 40
                self.match(v3_compilerParser.Semi)
                localctx.myGlobalAST += '(%s)myDeclare'%(localctx.d.myDeclareAST)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                localctx._myFuncDefinition = self.myFuncDefinition()
                localctx.myGlobalAST += '(%s)myFuncDefinition'%(localctx._myFuncDefinition.myFuncDefinitionAST)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                localctx._myNL = self.myNL()
                localctx.myGlobalAST += '%s'%(localctx._myNL.myNLAST)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MyDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.myDeclareAST = ''
            self._myType = None # MyTypeContext
            self.id1 = None # Token
            self._myExpr = None # MyExprContext
            self.id2 = None # Token
            self._ID = None # Token
            self._IntegerConstant = None # Token
            self.int1 = None # Token
            self.int2 = None # Token
            self._myStatement = None # MyStatementContext

        def myType(self):
            return self.getTypedRuleContext(v3_compilerParser.MyTypeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.ID)
            else:
                return self.getToken(v3_compilerParser.ID, i)

        def Star(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.Star)
            else:
                return self.getToken(v3_compilerParser.Star, i)

        def Assign(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.Assign)
            else:
                return self.getToken(v3_compilerParser.Assign, i)

        def myExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(v3_compilerParser.MyExprContext)
            else:
                return self.getTypedRuleContext(v3_compilerParser.MyExprContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.Comma)
            else:
                return self.getToken(v3_compilerParser.Comma, i)

        def LeftBracket(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.LeftBracket)
            else:
                return self.getToken(v3_compilerParser.LeftBracket, i)

        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.IntegerConstant)
            else:
                return self.getToken(v3_compilerParser.IntegerConstant, i)

        def RightBracket(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.RightBracket)
            else:
                return self.getToken(v3_compilerParser.RightBracket, i)

        def LeftBrace(self):
            return self.getToken(v3_compilerParser.LeftBrace, 0)

        def RightBrace(self):
            return self.getToken(v3_compilerParser.RightBrace, 0)

        def LeftParen(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.LeftParen)
            else:
                return self.getToken(v3_compilerParser.LeftParen, i)

        def RightParen(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.RightParen)
            else:
                return self.getToken(v3_compilerParser.RightParen, i)

        def myFuncInputPara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(v3_compilerParser.MyFuncInputParaContext)
            else:
                return self.getTypedRuleContext(v3_compilerParser.MyFuncInputParaContext,i)


        def STRUCT(self):
            return self.getToken(v3_compilerParser.STRUCT, 0)

        def myStatement(self):
            return self.getTypedRuleContext(v3_compilerParser.MyStatementContext,0)


        def getRuleIndex(self):
            return v3_compilerParser.RULE_myDeclare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMyDeclare" ):
                listener.enterMyDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMyDeclare" ):
                listener.exitMyDeclare(self)




    def myDeclare(self):

        localctx = v3_compilerParser.MyDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_myDeclare)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                localctx._myType = self.myType()
                localctx.myDeclareAST += '((%s'%(localctx._myType.myTypeAST)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==v3_compilerParser.Star:
                    self.state = 53
                    self.match(v3_compilerParser.Star)
                    localctx.myDeclareAST += '*'
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                localctx.id1 = self.match(v3_compilerParser.ID)
                localctx.myDeclareAST += ')type,(%s)var)myDeclare'%((None if localctx.id1 is None else localctx.id1.text))
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==v3_compilerParser.Assign:
                    self.state = 62
                    self.match(v3_compilerParser.Assign)
                    self.state = 63
                    localctx._myExpr = self.myExpr(0)
                    localctx.myDeclareAST += '((=)op,(%s)var,%s)myExpr'%((None if localctx.id1 is None else localctx.id1.text), localctx._myExpr.myExprAST)


                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==v3_compilerParser.Comma:
                    self.state = 68
                    self.match(v3_compilerParser.Comma)
                    localctx.myDeclareAST += '((%s'%(localctx._myType.myTypeAST)
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==v3_compilerParser.Star:
                        self.state = 70
                        self.match(v3_compilerParser.Star)
                        localctx.myDeclareAST += '*'
                        self.state = 76
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 77
                    localctx.id2 = self.match(v3_compilerParser.ID)
                    localctx.myDeclareAST += ')type,(%s)var)myDeclare'%((None if localctx.id2 is None else localctx.id2.text))
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==v3_compilerParser.Assign:
                        self.state = 79
                        self.match(v3_compilerParser.Assign)
                        self.state = 80
                        localctx._myExpr = self.myExpr(0)
                        localctx.myDeclareAST += '((=)op,(%s)var,%s)myExpr'%((None if localctx.id2 is None else localctx.id2.text), localctx._myExpr.myExprAST)


                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                localctx._myType = self.myType()
                self.state = 91
                localctx._ID = self.match(v3_compilerParser.ID)
                self.state = 92
                self.match(v3_compilerParser.LeftBracket)
                self.state = 93
                localctx._IntegerConstant = self.match(v3_compilerParser.IntegerConstant)
                self.state = 94
                self.match(v3_compilerParser.RightBracket)
                localctx.myDeclareAST += '((%s[%s])type,(%s)var'%(localctx._myType.myTypeAST, (None if localctx._IntegerConstant is None else localctx._IntegerConstant.text), (None if localctx._ID is None else localctx._ID.text))
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==v3_compilerParser.LeftBracket:
                    self.state = 96
                    self.match(v3_compilerParser.LeftBracket)
                    self.state = 97
                    localctx._IntegerConstant = self.match(v3_compilerParser.IntegerConstant)
                    self.state = 98
                    self.match(v3_compilerParser.RightBracket)
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==v3_compilerParser.Assign:
                    self.state = 104
                    self.match(v3_compilerParser.Assign)
                    self.state = 105
                    self.match(v3_compilerParser.LeftBrace)
                    self.state = 106
                    localctx.int1 = self.match(v3_compilerParser.IntegerConstant)
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==v3_compilerParser.Comma:
                        self.state = 107
                        self.match(v3_compilerParser.Comma)
                        self.state = 108
                        localctx.int2 = self.match(v3_compilerParser.IntegerConstant)
                        self.state = 113
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 114
                    self.match(v3_compilerParser.RightBrace)


                localctx.myDeclareAST += ')myDeclare'
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.myType()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==v3_compilerParser.LeftParen:
                    self.state = 120
                    self.match(v3_compilerParser.LeftParen)


                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==v3_compilerParser.Star:
                    self.state = 123
                    self.match(v3_compilerParser.Star)


                self.state = 126
                self.match(v3_compilerParser.ID)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==v3_compilerParser.RightParen:
                    self.state = 127
                    self.match(v3_compilerParser.RightParen)


                self.state = 130
                self.match(v3_compilerParser.LeftParen)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << v3_compilerParser.INT) | (1 << v3_compilerParser.VOID) | (1 << v3_compilerParser.STRUCT))) != 0):
                    self.state = 131
                    self.myFuncInputPara()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==v3_compilerParser.Comma:
                        self.state = 132
                        self.match(v3_compilerParser.Comma)
                        self.state = 133
                        self.myFuncInputPara()
                        self.state = 138
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 141
                self.match(v3_compilerParser.RightParen)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.match(v3_compilerParser.STRUCT)
                self.state = 144
                localctx._ID = self.match(v3_compilerParser.ID)
                localctx.myDeclareAST += '((%s)myStructName' %((None if localctx._ID is None else localctx._ID.text))
                self.state = 146
                localctx._myStatement = self.myStatement()
                localctx.myDeclareAST += '(%s)myStructBody)myStructDefinition' %(localctx._myStatement.myStatementAST)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MyFuncDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.myFuncDefinitionAST = ''
            self._myType = None # MyTypeContext
            self._ID = None # Token
            self._myFuncInputPara = None # MyFuncInputParaContext
            self._myStatement = None # MyStatementContext

        def myType(self):
            return self.getTypedRuleContext(v3_compilerParser.MyTypeContext,0)


        def ID(self):
            return self.getToken(v3_compilerParser.ID, 0)

        def LeftParen(self):
            return self.getToken(v3_compilerParser.LeftParen, 0)

        def RightParen(self):
            return self.getToken(v3_compilerParser.RightParen, 0)

        def myStatement(self):
            return self.getTypedRuleContext(v3_compilerParser.MyStatementContext,0)


        def myFuncInputPara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(v3_compilerParser.MyFuncInputParaContext)
            else:
                return self.getTypedRuleContext(v3_compilerParser.MyFuncInputParaContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(v3_compilerParser.Comma)
            else:
                return self.getToken(v3_compilerParser.Comma, i)
